Ended wardrobe element deleting

--- a/app/src/main/res/layout/activity_wardrobe_element_adapter.xml
+++ b/app/src/main/res/layout/activity_wardrobe_element_adapter.xml
@@ -1,32 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/wardrobeElementPicture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:color/black" />
-
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/wardrobeElementName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="24sp" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/wardrobeElementPicture"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_margin="8dp"
+            app:civ_border_width="1dp"
+            app:civ_border_color="#E0E0E0" />
 
-        <TextView
-            android:id="@+id/wardrobeElementType"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@drawable/wardrobe_list_content">
+
+            <TextView
+                android:id="@+id/wardrobeElementName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                style="@style/WardrobeListName"/>
+
+            <TextView
+                android:id="@+id/wardrobeElementType"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                style="@style/WardrobeListType"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
