--- a/app/src/main/res/layout/activity_wardrobe.xml
+++ b/app/src/main/res/layout/activity_wardrobe.xml
@@ -41,7 +41,8 @@
                 android:id="@+id/myList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                android:divider="#FFFFFF"/>
 
         </android.support.constraint.ConstraintLayout>
 
