--- a/app/src/main/res/layout/activity_wardrobe_element_adapter.xml
+++ b/app/src/main/res/layout/activity_wardrobe_element_adapter.xml
@@ -26,14 +26,14 @@
             android:background="@drawable/wardrobe_list_content">
 
             <TextView
-                android:id="@+id/wardrobeElementName"
+                android:id="@+id/wardrobeElementType"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
                 style="@style/WardrobeListName"/>
 
             <TextView
-                android:id="@+id/wardrobeElementType"
+                android:id="@+id/wardrobeElementColor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
