--- a/app/src/main/res/layout/activity_wardrobe_outfit_add.xml
+++ b/app/src/main/res/layout/activity_wardrobe_outfit_add.xml
@@ -10,31 +10,111 @@
     android:layout_gravity="left"
     tools:context="fr.hexus.dresscode.dresscode.WardrobeOutfitAdd">
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/content_frame"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="?attr/actionBarSize"
+            style="@style/HeaderBackground"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                style="@style/HeaderBackground"
-                android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+                android:layout_height="0dp"
+                android:layout_weight="1">
 
-            <ListView
-                android:id="@+id/myList"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-        </android.support.constraint.ConstraintLayout>
+                    <TextView
+                        android:id="@+id/outfitNameLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/AddFormLabel"
+                        android:text="@string/wardrobe_outfit_add_form_name"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toTopOf="@+id/outfitNameValue"/>
 
-    </android.support.constraint.ConstraintLayout>
+                    <EditText
+                        android:id="@+id/outfitNameValue"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:inputType="textPersonName"
+                        android:hint="@string/wardrobe_outfit_add_form_name_hint"
+                        app:layout_constraintTop_toBottomOf="@+id/outfitNameLabel"
+                        app:layout_constraintBottom_toTopOf="@+id/outfitElementsHeader"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
+
+                    <LinearLayout
+                        android:id="@+id/outfitElementsHeader"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        app:layout_constraintTop_toBottomOf="@+id/outfitNameValue"
+                        app:layout_constraintBottom_toTopOf="@+id/outfitElementsList">
+
+                        <TextView
+                            android:id="@+id/outfitElementsLabel"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:layout_weight="1"
+                            android:text="@string/wardrobe_outfit_add_form_elements" />
+
+                        <android.support.design.widget.FloatingActionButton
+                            android:id="@+id/outfitElementsAdd"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="#428BCA"
+                            app:borderWidth="0dp"
+                            android:src="@drawable/ic_round_add"
+                            android:layout_margin="8dp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/outfitElementsList"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:background="@drawable/border"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="16dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
+                        app:layout_constraintTop_toBottomOf="@+id/outfitElementsHeader"
+                        app:layout_constraintBottom_toBottomOf="parent">
+
+                        <ListView
+                            android:id="@+id/myList"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:divider="#FFFFFF"/>
+
+                        <TextView
+                            android:id="@+id/outfitElementsEmpty"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/wardrobe_outfit_add_form_elements_empty"
+                            android:textAlignment="center"/>
+
+                    </LinearLayout>
+
+                </android.support.constraint.ConstraintLayout>
+
+            </ScrollView>
+
+    </LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/dresscodeMenu"
