--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,7 @@
     android:id="@+id/myDrawer"
     tools:openDrawer="start"
     android:layout_gravity="left"
-    tools:context="fr.hexus.dresscode.dresscode.HomeActivity">
+    tools:context="fr.hexus.dresscode.activities.HomeActivity">
 
     <FrameLayout
         android:id="@+id/content_frame"
