--- a/app/src/main/res/layout/activity_choose_wardrobe_element.xml
+++ b/app/src/main/res/layout/activity_choose_wardrobe_element.xml
@@ -16,12 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            style="@style/HeaderBackground"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+        <include layout="@layout/toolbar" />
 
         <ListView
             android:id="@+id/myList"
