--- a/app/src/main/res/layout/activity_wardrobe_add_element.xml
+++ b/app/src/main/res/layout/activity_wardrobe_add_element.xml
@@ -32,12 +32,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                style="@style/HeaderBackground"
-                android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+            <include layout="@layout/toolbar" />
 
             <ScrollView
                 android:id="@+id/formScrollView"
